test/fail/UselessPrivatePrivate.agda
module UselessPrivatePrivate where

private
  private
    postulate
      A : Set
